# aa-figl-theme

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml
figl_theme/: __init__.py  app_settings.py  apps.py  auth_hooks.py  tasks.py  urls.py  views.py
figl_theme/static/figl_theme/css/: figl-theme-overrides.css  figl-theme.css
figl_theme/templates/allianceauth/: base-bs5.html  top-menu-rh-default.html
figl_theme/templates/authentication/: dashboard_characters.html
figl_theme/templates/figl_theme/: base.html  index.html  theme_css.html  theme_js.html
figl_theme/templates/fittings/: dashboard.html  view_all_categories.html  view_all_fits.html
figl_theme/tests/: test_figl_theme.py
testauth/settings/: local.py
